Finish subsection on ml fields

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -176,4 +176,67 @@ Best thesis ever:
 	url = {http://www.deeplearningbook.org},
 	year = {2016},
 }
-
+@software{lensApp,
+	author = {Max Jokel},
+	publisher = {TUM-I05 (Severin Reiz)},
+	title = {TUM-Lens},
+	url = {https://play.google.com/store/apps/details?id=com.maxjokel.lens},
+	version = {1.0},
+	date = {2021-07-31},
+}
+@article{introSemiSup,
+	author = {Xiaojin Zhu and Andrew B. Goldberg},
+	doi = {10.2200/S00196ED1V01Y200906AIM006},
+	journal = {Synthesis Lectures on Artificial Intelligence and Machine Learning},
+	month = {6},
+	pages = {1-130},
+	publisher = {Morgan & Claypool Publishers},
+	title = {{Introduction to Semi-Supervised Learning}},
+	volume = {3},
+	url = {https://doi.org/10.2200/S00196ED1V01Y200906AIM006},
+	year = {2009},
+}
+@book{introRL,
+	author = {Richard S. Sutton and Andrew G. Barto},
+	city = {Cambridge, Massachusetts},
+	edition = {second edition},
+	editor = {Frances Bach},
+	isbn = {9780262039246},
+	publisher = {The MIT Press},
+	title = {{Reinforcement Learning: An Introduction}},
+	year = {2018},
+}
+@article{introSupervised,
+	title={Introduction to supervised learning},
+	author={Learned-Miller, Erik G},
+	journal={I: Department of Computer Science, University of Massachusetts},
+	year={2014},
+	city = {Amherst, MA},
+	month = {2},
+}
+@article{introUnsupervised,
+	author = {R. Sathya and Annamma Abraham},
+	issn = {2165-4069},
+	issue = {2},
+	journal = {International Journal of Advanced Research in Artificial Intelligence},
+	pages = {34-38},
+	title = {{Comparison of Supervised and Unsupervised Learning Algorithms for Pattern Classification}},
+	volume = {2},
+	year = {2013},
+}
+@article{rlCars,
+	author = {Ahmad EL Sallab and Mohammed Abdou and Etienne Perot and Senthil Yogamani},
+	journal = {Electronic Imaging},
+	pages = {70-76},
+	title = {{Deep reinforcement learning framework for autonomous driving}},
+	volume = {2017},
+	year = {2017},
+}
+@article{rlStarCraft,
+	author = {Oriol Vinyals and Igor Babuschkin and Wojciech M Czarnecki and Micha\{\"e\}l Mathieu and Andrew Dudzik and Junyoung Chung and David H Choi and Richard Powell and Timo Ewalds and Georgiev Petko and others},
+	journal = {Nature},
+	pages = {350-354},
+	title = {{Grandmaster level in StarCraft II using multi-agent reinforcement learning}},
+	volume = {575},
+	year = {2019},
+}
