finish object detection tasks

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -12,6 +12,18 @@ Best thesis ever:
 	year = {2017},
 	URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf},
 }
+@thesis{maxJokel,
+	address = {Garching},
+	author = {Jokel, Maximilian},
+	institution = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
+	month = nov,
+	organization = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
+	school = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
+	title = {{Implementing a TensorFlow-Slim based Android app for image classification}},
+	type = {Bachelor's thesis},
+	year = {2020},
+	URL = {https://mediatum.ub.tum.de/1579885},
+}
 @online{nnapi_devguide_2021,
    author = {Android Developers},
    journal = {Android Developers NDK Guides},
@@ -239,4 +251,11 @@ Best thesis ever:
 	title = {{Grandmaster level in StarCraft II using multi-agent reinforcement learning}},
 	volume = {575},
 	year = {2019},
+}
+@article{dlForDetection,
+	author={Agarwal, Shivang and Terrail, Jean Ogier Du and Jurie, Fr{\'e}d{\'e}ric},
+	journal = {arXiv preprint arXiv:1809.03193},
+	month = {9},
+	title = {{Recent Advances in Object Detection in the Age of Deep Convolutional Neural Networks}},
+	year = {2018},
 }
